--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "./css/main.css">
-    <title>Stock Simulator</title>
+    <title>BSE Simulator</title>
 </head>
 <body>
     <div class="navigation-container">
         <div class="brand-el">
-            <h2>Stock Simulator</h2>
+            BSE Stock Simulator
         </div>
         <div class="login-register-container">
             <div class="login-container">
@@ -26,10 +26,10 @@
     </div>
     <div class="hero-container">
         <div class="info-container">
-            <h1>Practice stock trading with virtual money</h1>
+            <p>Real market feeling, with <br>Zero Risk</p>
         </div>
         <div class="image-container">
-            <img src="./assets/illustration-mobile-phone.7d7162b.svg" alt="illustration-mobile-phone">
+            <img src="./assets/image-hero-desktop.png" alt="illustration-mobile-phone">
         </div>
     </div>
 </body>
