rewritten login and register pages

--- a/register.html
+++ b/register.html
@@ -7,42 +7,45 @@
     <title>Register Signup</title>
 </head>
 <body>
-     <div class="main">
-        <div class="main-container">
-            <div class="text-container">
-                <div class="heading">
-                    <h1>Learn to code by watching others</h1>
-                </div>
-                <div class="paragraph">
-                    <p>See how experienced developers solve problem in real-time. Watching scripted tutorials is great, but understanding how develpers think is invaluable.</p>
-                </div>
+    <div class="navigation-container">
+        <div class="brand-el">
+            BSE Stock Simulator
+        </div>
+    </div>
+    <div class="main-container">
+        <div class="text-container">
+            <div class="heading">
+                <p>Learn to code by watching others</p>
             </div>
-            <div class="form-container">
-                <div class="form">
-                    <div class="form-cont">
-                        <form name="signup-form" action="" method="post" autocomplete="off">
-                            <input type="text" name="" id="finput">
-                            <p class="error first-name-error">First Name cannot be empty</p>
+            <div class="paragraph">
+                <p>See how experienced developers solve problem in real-time. Watching scripted tutorials is great, but understanding how develpers think is invaluable.</p>
+            </div>
+        </div>
+        <div class="form-container">
+            <div class="form">
+                <div class="form-cont">
+                    <form name="signup-form" action="" method="post" autocomplete="off">
+                        <input type="text" name="" id="finput">
+                        <p class="error first-name-error">First Name cannot be empty</p>
 
-                            <input type="text" name="" id="linput">
-                            <p class="error last-name-error">Last Name cannot be empty</p>
+                        <input type="text" name="" id="linput">
+                        <p class="error last-name-error">Last Name cannot be empty</p>
 
-                            <input type="email" name="" id="einput">
-                            <p class="error email-error">Looks like this is not an email</p>
+                        <input type="email" name="" id="einput">
+                        <p class="error email-error">Looks like this is not an email</p>
 
-                            <input type="text" name="" id="pinput">
-                            <p class="error password-error">Password cannot be empty</p>
+                        <input type="text" name="" id="pinput">
+                        <p class="error password-error">Password cannot be empty</p>
 
-                            <button type="button" id="button">
-                                REGISTER
-                            </button>
-                            <p class="terms-and-services">By clicking the button, you are agreeing to our <b class="red-services">Terms and Services</b></p>
-                        </form>
-                    </div>
+                        <button type="button" id="button">
+                            REGISTER
+                        </button>
+                        <p class="terms-and-services">By clicking the button, you are agreeing to our <b class="red-services">Terms and Services</b></p>
+                    </form>
                 </div>
             </div>
         </div>
-     </div>   
+    </div>  
 </body>
 <script src="./js/register.js"></script>
 </html>
