--- a/login.html
+++ b/login.html
@@ -7,35 +7,38 @@
     <title>Login Signup</title>
 </head>
 <body>
-     <div class="main">
-        <div class="main-container">
-            <div class="text-container">
-                <div class="heading">
-                    <h1>Learn to code by watching others</h1>
-                </div>
-                <div class="paragraph">
-                    <p>See how experienced developers solve problem in real-time. Watching scripted tutorials is great, but understanding how develpers think is invaluable.</p>
-                </div>
+    <div class="navigation-container">
+        <div class="brand-el">
+            BSE Stock Simulator
+        </div>
+    </div>
+    <div class="main-container">
+        <div class="text-container">
+            <div class="heading">
+                <p>Learn to code by watching others</p>
             </div>
-            <div class="form-container">
-                <div class="form">
-                    <div class="form-cont">
-                        <form name="signup-form" action="" method="post" autocomplete="off">
-                            <input type="email" name="" id="einput">
-                            <p class="error email-error">Looks like this is not an email</p>
+            <div class="paragraph">
+                <p>See how experienced developers solve problem in real-time. Watching scripted tutorials is great, but understanding how develpers think is invaluable.</p>
+            </div>
+        </div>
+        <div class="form-container">
+            <div class="form">
+                <div class="form-cont">
+                    <form name="signup-form" action="" method="post" autocomplete="off">
+                        <input type="email" name="" id="einput">
+                        <p class="error email-error">Looks like this is not an email</p>
 
-                            <input type="text" name="" id="pinput">
-                            <p class="error password-error">Password cannot be empty</p>
+                        <input type="text" name="" id="pinput">
+                        <p class="error password-error">Password cannot be empty</p>
 
-                            <button type="button" id="button">
-                                LOGIN
-                            </button>
-                        </form>
-                    </div>
+                        <button type="button" id="button">
+                            LOGIN
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
-     </div>   
+    </div> 
 </body>
 <script src="./js/login.js"></script>
 </html>
