--- a/user.html
+++ b/user.html
@@ -18,8 +18,14 @@
         </div>
     </div>
     <div class="hero-container">
-        <div class="input-button-container">
-            <input type="search" class="input-el" style="font-size: 1rem;" placeholder="Search for Stocks ">
+        <div class="search-container">
+            <div class="input-button-container">
+                <input type="search" id = "input-el" class="input-el" style="font-size: 1rem;" placeholder="Search for Stocks " autocomplete="off">
+            </div>
+            <div class="suggesstions-wrap">
+                <ul class="suggesstions">
+                </ul>
+            </div>
         </div>
         <div class="portfolio-container">
             <div class="box">
@@ -48,5 +54,6 @@
             </div>
         </div>
     </div>
+    <script src="./js/user.js"></script>
 </body>
 </html>
